--- a/mocker-front/src/index.html
+++ b/mocker-front/src/index.html
@@ -6,8 +6,7 @@
   <base href='/'>
   <meta content='width=device-width, initial-scale=1' name='viewport'>
   <link href='assets/icon/panda.ico' rel='icon' type='image/x-icon'>
-  <link href='https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro-v6@44659d9/css/all.min.css' rel='stylesheet'
-        type='text/css'/>
+  <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet" type="text/css" />
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/93690/leader-line.min.js'></script>
 </head>
 <body>
